# quick-fp

./: Cargo.toml
src/: approx.rs  lib.rs  nalgebra.rs  num.rs  num_traits.rs  ops.rs  simba.rs
